--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -5,11 +5,10 @@
 /* Front page */
 
 .front-logo {
-    background-image: url(../assets/images/ChelseaJadeMedia-logo.svg);
+    background-image: url(../assets/logos/ChelseaJadeMedia-logo.png);
 			background-size: cover;
 			background-position: right;
-			// grid-column: 2 / 4;
-			// grid-row: 1 / 4;
-			width: 100%;
+            width: 200px;
+            height: 200px;
 			z-index: 2;
 }
