--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -2,13 +2,38 @@
 # Page Templates
 --------------------------------------------------------------*/
 
+// .content-area {
+//     background-color: black;
+// }
+
 /* Front page */
 
-.front-logo {
+.site-info {
+	// grid-column: 1 / 4;
+	// grid-row: 4 / 5;
+	padding: 0.5rem 0rem 0.5rem 0rem;
+	z-index: 2;
+	width: 100%;
+	align-self: center;
+
+.front-grid {
+    display: grid;
+	grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 50vh 7vh 7vh 7vh;
+    grid-gap: 0;
+	justify-self: center;
+	padding-top: 7rem;
+	padding-bottom: 2.5rem;
+	width: 90%;
+	margin: 0 auto;
+	// position: relative;
+
+    .front-logo {
+    display: grid;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
     background-image: url(../assets/logos/ChelseaJadeMedia-logo.png);
-			background-size: cover;
-			background-position: right;
-            width: 200px;
-            height: 200px;
-			z-index: 2;
+    background-size: cover;
+    width: 100%;
+    }
 }
