--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -14,7 +14,8 @@
 	padding: 0.5rem 0rem 0.5rem 0rem;
 	z-index: 2;
 	width: 100%;
-	align-self: center;
+    align-self: center;
+}
 
 .front-grid {
     display: grid;
@@ -26,7 +27,8 @@
 	padding-bottom: 2.5rem;
 	width: 90%;
 	margin: 0 auto;
-	// position: relative;
+    // position: relative;
+
 
     .front-logo {
     display: grid;
