--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -680,21 +680,9 @@ object {
 .front-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 50vh 7vh 7vh 7vh;
-  grid-gap: 0;
-  justify-self: center;
-  padding-top: 7rem;
-  padding-bottom: 2.5rem;
-  width: 90%;
-  margin: 0 auto; }
-  .front-grid .front-logo {
-    display: grid;
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-    background-image: url(../assets/logos/ChelseaJadeMedia-logo.png);
-    background-size: cover;
-    width: 100%; }
-
-.box-image {
-  width: 8rem;
-  height: 6rem; }
+  grid-gap: 1rem;
+  padding: 0px;
+  margin-bottom: 2rem; }
+  .front-grid .box-image {
+    width: 8rem;
+    height: 6rem; }
