--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -22,11 +22,28 @@
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 1rem;
         padding: 0px;
-        margin-bottom: 2rem;
+        width: 90%;
+        margin: 0 auto;
+        align-items: center;
+
+        .front-logo {
+            height: 20rem;
+            width: 20rem;
+            grid-column: span 2;
+            justify-self: center;
+          }
+
+        .box-container {
+            height: 20rem;
+            width: 20rem;
+            grid-column: span 2;
+            justify-self: center;
+        }
 
         .box-image {
-            width: 8rem;
-            height: 6rem;
-          }
+            height: 20rem;
+            width: 20rem;
+            justify-self: center;
+        }
 
 }
