--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -682,7 +682,22 @@ object {
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
   padding: 0px;
-  margin-bottom: 2rem; }
+  width: 90%;
+  margin: 0 auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .front-grid .front-logo {
+    height: 20rem;
+    width: 20rem;
+    grid-column: span 2;
+    justify-self: center; }
+  .front-grid .box-container {
+    height: 20rem;
+    width: 20rem;
+    grid-column: span 2;
+    justify-self: center; }
   .front-grid .box-image {
-    width: 8rem;
-    height: 6rem; }
+    height: 20rem;
+    width: 20rem;
+    justify-self: center; }
