--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -37,13 +37,20 @@
             height: 20rem;
             width: 20rem;
             grid-column: span 2;
-            justify-self: center;
+            justify-self: center;    
         }
 
         .box-image {
+            display: flex;
             height: 20rem;
             width: 20rem;
-            justify-self: center;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .box-title {
+            text-align: center;
+            margin: 0;
         }
 
 }
