--- a/themes/cjmedia/sass/_variables.scss
+++ b/themes/cjmedia/sass/_variables.scss
@@ -2,6 +2,12 @@
 
 $base__space-unit: 1.5rem;
 
+// Media Queries 
+
+$desktop: 1080px;
+$tablet: 768px;
+$iphone: 375px;
+
 // Colors
 
 $color__background-body: #fff;
