--- a/themes/cjmedia/sass/style.scss
+++ b/themes/cjmedia/sass/style.scss
@@ -1,18 +1,17 @@
 /*!
-Theme Name: RED Starter Theme
+Theme Name: Chelsea Jade Media Theme
 Theme URI: http://underscores.me/
-Author: RED Academy
-Author URI: http://www.redacademy.com
-Description: A WordPress starter theme for RED Academy students.
+Author: Hillary McLean
+Author URI: https://github.com/hillmclean
+Description: A WordPress theme just for Chelsea 
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags:
 
 This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
 
-RED Starter Theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+This theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
@@ -45,6 +44,11 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	## Front page
 --------------------------------------------------------------*/
 
+// Import font-awesome
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css");
+// Import hamburger menu effects
+@import url("https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css");
+
 // Imported but not included in the stylesheet.
 
 @import "variables";
@@ -63,3 +67,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "content";
 @import "media";
 @import "page-templates";
+
+//Import specific style files
+@import "header";
+// Styles that could be shared and should be adjusted later
