--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -1,18 +1,17 @@
 /*!
-Theme Name: RED Starter Theme
+Theme Name: Chelsea Jade Media Theme
 Theme URI: http://underscores.me/
-Author: RED Academy
-Author URI: http://www.redacademy.com
-Description: A WordPress starter theme for RED Academy students.
+Author: Hillary McLean
+Author URI: https://github.com/hillmclean
+Description: A WordPress theme just for Chelsea 
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags:
 
 This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
 
-RED Starter Theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+This theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
@@ -43,6 +42,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Page Templates
 	## Front page
 --------------------------------------------------------------*/
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.1.3/hamburgers.min.css");
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -418,6 +419,9 @@ textarea {
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
+html {
+  scroll-behavior: smooth; }
+
 /* Links */
 a {
   color: royalblue; }
@@ -712,3 +716,133 @@ object {
   .front-grid .box-title {
     text-align: center;
     margin: 0; }
+
+.site-header {
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  background-color: white;
+  top: 0; }
+  @media screen and (min-width: 1080px) {
+    .site-header {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; } }
+  .site-header .site-branding {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 1rem 1.4rem;
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    @media screen and (min-width: 1080px) {
+      .site-header .site-branding .hamburger {
+        display: none; } }
+  .site-header img {
+    height: 2.8rem; }
+  .site-header .menu-menu-container {
+    width: 100vw; }
+    @media screen and (min-width: 1080px) {
+      .site-header .menu-menu-container {
+        width: auto; } }
+  .site-header .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: absolute;
+    right: -100vw;
+    width: 0;
+    -webkit-transition-timing-function: ease-in-out;
+            transition-timing-function: ease-in-out;
+    -webkit-transition-property: all;
+    transition-property: all;
+    -webkit-transition-duration: .8s;
+            transition-duration: .8s;
+    text-align: right; }
+    @media screen and (min-width: 1080px) {
+      .site-header .menu {
+        width: auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        position: relative;
+        right: auto;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row; } }
+    .site-header .menu a {
+      right: -100vw;
+      -webkit-transition-timing-function: ease-in-out;
+              transition-timing-function: ease-in-out;
+      -webkit-transition-property: all;
+      transition-property: all;
+      -webkit-transition-duration: .1s;
+              transition-duration: .1s;
+      margin: 1.4rem;
+      text-transform: uppercase;
+      border-bottom: solid transparent .15rem; }
+      @media screen and (min-width: 1080px) {
+        .site-header .menu a {
+          margin: 1.4rem; } }
+      @media screen and (min-width: 1080px) {
+        .site-header .menu a {
+          padding-bottom: .2rem; }
+          .site-header .menu a:active, .site-header .menu a:hover {
+            border-bottom: solid green .15rem; } }
+    .site-header .menu li {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: end;
+          -ms-flex-pack: end;
+              justify-content: flex-end; }
+      .site-header .menu li:last-child > a {
+        border: solid green .15rem;
+        color: solid green .15rem;
+        font-weight: 900;
+        width: auto;
+        padding: .4rem 2rem;
+        text-align: center; }
+        @media screen and (min-width: 1080px) {
+          .site-header .menu li:last-child > a {
+            margin: .7rem;
+            width: 100%;
+            padding: .7rem 2.25rem; } }
+  .site-header .menu-show {
+    display: block;
+    width: 100vw;
+    right: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: absolute;
+    -webkit-transition-timing-function: ease-in-out;
+            transition-timing-function: ease-in-out;
+    -webkit-transition-property: all;
+    transition-property: all;
+    -webkit-transition-duration: .8s;
+            transition-duration: .8s; }
+    .site-header .menu-show a {
+      position: relative;
+      right: 0;
+      visibility: visible; }
