adds top image to about page

--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -54,3 +54,13 @@
         }
 
 }
+
+/* About  page */
+
+.top-image {
+    display: flex;
+    height: 20rem;
+    width: 20rem;
+    align-items: center;
+    justify-content: center;
+}
