--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -716,6 +716,20 @@ object {
     text-align: center;
     margin: 0; }
 
+/* About  page */
+.top-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 20rem;
+  width: 20rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
 .site-header {
   position: fixed;
   width: 100%;
