--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -2,35 +2,35 @@
 # Page Templates
 --------------------------------------------------------------*/
 
-// .content-area {
-//     background-color: black;
-// }
-
 /* Front page */
 
-.site-info {
-	// grid-column: 1 / 4;
-	// grid-row: 4 / 5;
+.front-info {
 	padding: 0.5rem 0rem 0.5rem 0rem;
 	z-index: 2;
 	width: 100%;
     align-self: center;
 }
 
+.site-title-heading {
+    text-align: center;
+}
+
 .front-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 1rem;
-        padding: 0px;
-        width: 90%;
-        margin: 0 auto;
-        align-items: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    padding: 0px;
+    width: 90%;
+    margin: 0 auto;
+    align-items: center;
 
         .front-logo {
-            height: 20rem;
-            width: 20rem;
+            height: 15rem;
+            width: 15rem;
             grid-column: span 2;
             justify-self: center;
+            border-radius: 100%;
+            box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           }
 
         .box-container {
