adds social media icons to footer. adds youtube to social media widget

--- a/themes/cjmedia/sass/_navigation.scss
+++ b/themes/cjmedia/sass/_navigation.scss
@@ -78,10 +78,10 @@ a {
 		text-decoration: none;
 	}
 
-	.current_page_item > a,
-	.current-menu-item > a,
-	.current_page_ancestor > a {
-	}
+	// .current_page_item > a,
+	// .current-menu-item > a,
+	// .current_page_ancestor > a {
+	// }
 }
 
 /* Small menu. */
