--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -40,6 +40,8 @@
               display: flex;
               flex-direction: column;
               align-items: center;
+              justify-content: space-evenly;
+              height: 80vh;
           }
         .box-container {
             height: 15rem;
