--- a/themes/cjmedia/sass/_widgets.scss
+++ b/themes/cjmedia/sass/_widgets.scss
@@ -15,3 +15,10 @@
 .widget_search .search-submit {
 	display: none;
 }
+
+	.social-icons {
+		padding-inline-start: 0px;
+		margin: 0rem; 
+		font-size: 2.813rem;
+		list-style: none;
+}
