adds cta button in footer. aligns footer containers to center.

--- a/themes/cjmedia/sass/style.scss
+++ b/themes/cjmedia/sass/style.scss
@@ -70,4 +70,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 
 //Import specific style files
 @import "header";
+@import "footer";
 // Styles that could be shared and should be adjusted later
