--- a/themes/cjmedia/sass/_footer.scss
+++ b/themes/cjmedia/sass/_footer.scss
@@ -6,6 +6,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background: #E7EBEB;
+    padding: 3rem 0rem;
+
 
 .social-info-class {
 	display: flex;
