--- a/themes/cjmedia/sass/_footer.scss
+++ b/themes/cjmedia/sass/_footer.scss
@@ -10,33 +10,37 @@
     padding: 3rem 0rem;
 
 
-.social-info-class {
-	display: flex;
-	justify-content: center;
+    .social-info-class {
+        display: flex;
+        justify-content: center;
 
-	.social-icons {
-		display: flex;
-		flex-direction: row;
-		padding-inline-start: 0px;
-		margin: 0rem; 
-		font-size: 2.813rem;
-		list-style: none;
+        .social-icons {
+            display: flex;
+            flex-direction: row;
+            padding-inline-start: 0px;
+            margin: 0rem; 
+            font-size: 2.813rem;
+            list-style: none;
 
-		i {
-			padding: 1rem;
-		}
+            i {
+                padding: 1rem;
+            }
 
-		a {
-			color: #4D8AA0
-		}
+            a {
+                color: #4D8AA0
+            }
 
-}
-}
+        }
+    }
 
-.cta-button {
-	background: #3C549E;
-	padding: 1rem 5rem;
-	border-radius: 27px;
-	margin: 0 auto;
-}
+    .cta-button {
+        background: #3C549E;
+        padding: 1rem 5rem;
+        border-radius: 27px;
+        margin: 0 auto;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: white;
+        letter-spacing: 3px;
+    }
 }
