--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -74,10 +74,50 @@
 
 /* About  page */
 
-.top-image {
-    display: flex;
-    height: 20rem;
-    width: 20rem;
-    align-items: center;
-    justify-content: center;
+.site-main-about {
+    .entry-title {
+        display: none;
+    }
+    h1 {
+     font-size: 1.875rem;   
+     text-transform: none;
+     padding: 3rem 1.5rem;
+    }
+}
+
+.about-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+    grid-template-rows: 11rem 30rem 11rem 11rem 22rem 11rem;
+
+    .image-1 {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+
+    .content {
+        grid-column: 1 / 3; 
+        grid-row: 2 / 3;
+    }
+
+    .image-2 {
+        grid-column: 1 / 2;
+        grid-row: 3 / 5;
+    }
+
+    .image-3 {
+        grid-column: 2 / 3;
+        grid-row: 3 / 5;
+    }
+
+    .image-4 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+    }
+
+    .image-5 {
+        grid-column: 1 / 3;
+        grid-row: 6 / 7;
+    }
 }
