--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -745,18 +745,37 @@ object {
   border-radius: 100%; }
 
 /* About  page */
-.top-image {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 20rem;
-  width: 20rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+.site-main-about .entry-title {
+  display: none; }
+
+.site-main-about h1 {
+  font-size: 1.875rem;
+  text-transform: none;
+  padding: 3rem 1.5rem; }
+
+.about-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1rem;
+  grid-template-rows: 11rem 30rem 11rem 11rem 22rem 11rem; }
+  .about-grid .image-1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2; }
+  .about-grid .content {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3; }
+  .about-grid .image-2 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 5; }
+  .about-grid .image-3 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 5; }
+  .about-grid .image-4 {
+    grid-column: 1 / 3;
+    grid-row: 5 / 6; }
+  .about-grid .image-5 {
+    grid-column: 1 / 3;
+    grid-row: 6 / 7; }
 
 .site-header {
   position: fixed;
