--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -89,7 +89,10 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1rem;
-    grid-template-rows: 11rem 30rem 11rem 11rem 22rem 11rem;
+    grid-template-rows: 11rem 33rem 11rem 11rem 22rem 11rem;
+    width: 90vw;
+    margin: 0 auto;
+    padding-bottom: 4rem;
 
     .image-1 {
         grid-column: 1 / 3;
@@ -99,25 +102,33 @@
     .content {
         grid-column: 1 / 3; 
         grid-row: 2 / 3;
+
+        p {
+            font-weight: 300;
+        }
     }
 
     .image-2 {
         grid-column: 1 / 2;
         grid-row: 3 / 5;
+        margin: 0rem 1rem 1rem 0rem;
     }
 
     .image-3 {
         grid-column: 2 / 3;
         grid-row: 3 / 5;
+        margin: 0rem 0rem 1rem 1rem;
     }
 
     .image-4 {
         grid-column: 1 / 3;
         grid-row: 5 / 6;
+        margin: 1rem 0rem;
     }
 
     .image-5 {
         grid-column: 1 / 3;
         grid-row: 6 / 7;
+        margin-top: 1rem;
     }
 }
