--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -757,25 +757,34 @@ object {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
-  grid-template-rows: 11rem 30rem 11rem 11rem 22rem 11rem; }
+  grid-template-rows: 11rem 33rem 11rem 11rem 22rem 11rem;
+  width: 90vw;
+  margin: 0 auto;
+  padding-bottom: 4rem; }
   .about-grid .image-1 {
     grid-column: 1 / 3;
     grid-row: 1 / 2; }
   .about-grid .content {
     grid-column: 1 / 3;
     grid-row: 2 / 3; }
+    .about-grid .content p {
+      font-weight: 300; }
   .about-grid .image-2 {
     grid-column: 1 / 2;
-    grid-row: 3 / 5; }
+    grid-row: 3 / 5;
+    margin: 0rem 1rem 1rem 0rem; }
   .about-grid .image-3 {
     grid-column: 2 / 3;
-    grid-row: 3 / 5; }
+    grid-row: 3 / 5;
+    margin: 0rem 0rem 1rem 1rem; }
   .about-grid .image-4 {
     grid-column: 1 / 3;
-    grid-row: 5 / 6; }
+    grid-row: 5 / 6;
+    margin: 1rem 0rem; }
   .about-grid .image-5 {
     grid-column: 1 / 3;
-    grid-row: 6 / 7; }
+    grid-row: 6 / 7;
+    margin-top: 1rem; }
 
 .site-header {
   position: fixed;
