adds 2/3 colour boxes on about page

--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -93,10 +93,23 @@
     width: 90vw;
     margin: 0 auto;
     padding-bottom: 4rem;
+    position: relative;
 
     .image-1 {
         grid-column: 1 / 3;
         grid-row: 1 / 2;
+    }
+
+    .image-1-blue-box {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        background: #8EC6BF;
+        width: 13rem;
+        height: 13rem;
+        position: absolute;
+        top: -15px;
+	    left: -30px;
+        z-index: -1;
     }
 
     .content {
@@ -118,6 +131,18 @@
         grid-column: 2 / 3;
         grid-row: 3 / 5;
         margin: 0rem 0rem 1rem 1rem;
+    }
+
+    .image-1-red-box {
+        grid-column: 2 / 3;
+        grid-row: 3 / 5;
+        background: #DD7D74;
+        width: 13rem;
+        height: 13rem;
+        position: absolute;
+        top: -15px;
+	    left: -30px;
+        z-index: -1;
     }
 
     .image-4 {
