--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -792,16 +792,26 @@ object {
     grid-column: 2 / 3;
     grid-row: 3 / 5;
     background: #DD7D74;
-    width: 13rem;
-    height: 13rem;
+    width: 11rem;
+    height: 12rem;
     position: absolute;
     top: -15px;
-    left: -30px;
+    left: 0px;
     z-index: -1; }
   .about-grid .image-4 {
     grid-column: 1 / 3;
     grid-row: 5 / 6;
     margin: 1rem 0rem; }
+  .about-grid .image-1-orange-box {
+    grid-column: 1 / 3;
+    grid-row: 5 / 6;
+    background: #EBB67A;
+    width: 13rem;
+    height: 22rem;
+    position: absolute;
+    top: 0px;
+    left: -30px;
+    z-index: -1; }
   .about-grid .image-5 {
     grid-column: 1 / 3;
     grid-row: 6 / 7;
