adds tax categories to tax pages

--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -183,6 +183,12 @@
     justify-content: center;
     align-items: center;
 
+    .wp-video-popup {
+        display: flex; 
+        justify-content: center;
+        align-items: center;  
+    }
+
    .fa-play {
        position: absolute;
        z-index: 100;
