--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -831,6 +831,16 @@ object {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center; }
+  .video-embed .wp-video-popup {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
   .video-embed .fa-play {
     position: absolute;
     z-index: 100;
