--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -170,11 +170,12 @@
     }
 }
 
-/* Showcase Category Page */
+/* Showcase Category Archive Page */
 
 .cat-image {
-    height: 10rem;
-    width: 10rem;
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+    height: 100%;
 }
 
 .shop-title-box {
@@ -182,10 +183,45 @@
     text-align: center;;
 }
 
+.showcase-type {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.showcase-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 90vw;
+    height: 30vh;
+    border-radius: 5px;
+    margin: 1em;
+    &:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+      }
+}
+
+.cat-title {
+    padding: 2px 16px;
+}
+
 /* Taxonomy Pages */
+
+.shop-tax-header {
+    h1 {
+        margin: 5em 0em;
+        text-align: center; 
+    }
+}
 
 .showcase-categories {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
