--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -816,20 +816,67 @@ object {
     grid-row: 6 / 7;
     margin-top: 1rem; }
 
-/* Showcase Category Page */
+/* Showcase Category Archive Page */
 .cat-image {
-  height: 10rem;
-  width: 10rem; }
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+  height: 100%; }
 
 .shop-title-box {
   margin: 5em 0em;
   text-align: center; }
 
+.showcase-type {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.showcase-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  width: 90vw;
+  height: 30vh;
+  border-radius: 5px;
+  margin: 1em; }
+  .showcase-container:hover {
+    -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+
+.cat-title {
+  padding: 2px 16px; }
+
 /* Taxonomy Pages */
+.shop-tax-header h1 {
+  margin: 5em 0em;
+  text-align: center; }
+
 .showcase-categories {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -927,6 +974,8 @@ object {
     transition-property: all;
     -webkit-transition-duration: .8s;
             transition-duration: .8s;
+    background: white;
+    height: 100vh;
     text-align: right; }
     @media screen and (min-width: 1080px) {
       .site-header .menu {
@@ -969,7 +1018,8 @@ object {
       display: flex;
       -webkit-box-pack: end;
           -ms-flex-pack: end;
-              justify-content: flex-end; }
+              justify-content: flex-end;
+      font-size: 1.5em; }
       .site-header .menu li:last-child > a {
         background: #3C549E;
         padding: 1rem 5rem;
