--- a/themes/cjmedia/sass/_header.scss
+++ b/themes/cjmedia/sass/_header.scss
@@ -4,6 +4,7 @@
     z-index: 999;
     background-color: white;
     top: 0;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 		@include desktop {
 		display: flex;
 		align-items: center;
@@ -53,6 +54,7 @@
 			right: auto;
 			flex-direction: row;
 			justify-content: flex-end;
+			height: 10vh;
 		}
 	text-align: right;
 	a {
