--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -817,14 +817,27 @@ object {
     margin-top: 1rem; }
 
 /* Showcase Category Archive Page */
+.showcase-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-bottom: 5px solid #EBB67A;
+  margin: 0 auto;
+  margin-top: 5em;
+  margin-bottom: 3em;
+  width: 70%; }
+
+.showcase-title {
+  text-align: center;
+  text-transform: uppercase; }
+
 .cat-image {
   border-radius: 5px 5px 0 0;
   width: 100%;
   height: 100%; }
-
-.shop-title-box {
-  margin: 5em 0em;
-  text-align: center; }
 
 .showcase-type {
   width: 100%;
@@ -839,6 +852,10 @@ object {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center; }
+  .showcase-type a {
+    text-decoration: none;
+    color: #404040;
+    font-size: 1.2em; }
 
 .showcase-container {
   display: -webkit-box;
@@ -861,7 +878,8 @@ object {
   margin: 1em; }
   .showcase-container:hover {
     -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    color: #DD7D74; }
 
 .cat-title {
   padding: 2px 16px; }
@@ -923,7 +941,9 @@ object {
   width: 100%;
   z-index: 999;
   background-color: white;
-  top: 0; }
+  top: 0;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
   @media screen and (min-width: 1080px) {
     .site-header {
       display: -webkit-box;
@@ -991,7 +1011,8 @@ object {
                 flex-direction: row;
         -webkit-box-pack: end;
             -ms-flex-pack: end;
-                justify-content: flex-end; } }
+                justify-content: flex-end;
+        height: 10vh; } }
     .site-header .menu a {
       right: -100vw;
       -webkit-transition-timing-function: ease-in-out;
