--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -885,8 +885,18 @@ object {
   padding: 2px 16px; }
 
 /* Taxonomy Pages */
-.shop-tax-header h1 {
-  margin: 5em 0em;
+.showcase-tax-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-bottom: 5px solid #DD7D74;
+  margin: 0 auto;
+  margin-top: 5em;
+  margin-bottom: 3em;
+  width: 70%;
   text-align: center; }
 
 .showcase-categories {
@@ -895,16 +905,15 @@ object {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .showcase-categories a {
+    padding: .5rem .7rem;
+    text-decoration: none;
+    color: #EBB67A; }
+    .showcase-categories a:hover {
+      color: #DD7D74; }
 
 .video-embed {
   display: -webkit-box;
