adds styles to each showcase project title

--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -278,3 +278,12 @@
     height: auto; 
    }
 }
+
+.type-showcase {
+    background: #ebb67a;
+
+    .entry-header {
+        padding: 1em;
+        text-align: center;;
+    }
+}
