--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -279,11 +279,27 @@
    }
 }
 
-.type-showcase {
-    background: #ebb67a;
 
-    .entry-header {
-        padding: 1em;
-        text-align: center;;
+.site-main-show-tax {
+    .entry-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        width: 90vw;
+        height: 30vh;
+        border-radius: 5px;
+        margin: 1em;
+        &:hover {
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+            color:#DD7D74;
+          }
+          background: #ebb67a;
+
+          .entry-header {
+              padding: 1em;
+              text-align: center;;
+          }
     }
 }
