--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -945,9 +945,31 @@ object {
     width: 100%;
     height: auto; }
 
-.type-showcase {
+.site-main-show-tax .entry-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  width: 90vw;
+  height: 30vh;
+  border-radius: 5px;
+  margin: 1em;
   background: #ebb67a; }
-  .type-showcase .entry-header {
+  .site-main-show-tax .entry-content:hover {
+    -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    color: #DD7D74; }
+  .site-main-show-tax .entry-content .entry-header {
     padding: 1em;
     text-align: center; }
 
