--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -240,9 +240,9 @@
 }
 
 .showcase-categories {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: center;
 
     a {
         padding: .5rem .7rem;
@@ -282,20 +282,23 @@
 
 .site-main-show-tax {
     .entry-content {
+        // padding: 0 6px;
+//   float: left;
+  width: 24.99999%;
         display: flex;
         flex-direction: column;
         align-items: center;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
-        width: 90vw;
-        height: 30vh;
+        // width: 90vw;
+        // height: 30vh;
         border-radius: 5px;
-        margin: 1em;
+        // margin: 1em;
         &:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
             color:#DD7D74;
           }
-          background: #ebb67a;
+        //   background: #ebb67a;
 
           .entry-header {
               padding: 1em;
@@ -303,3 +306,7 @@
           }
     }
 }
+
+* {
+    box-sizing: border-box;
+  }
