--- a/themes/cjmedia/sass/_page-templates.scss
+++ b/themes/cjmedia/sass/_page-templates.scss
@@ -281,24 +281,35 @@
 
 
 .site-main-show-tax {
+
+    .projects {
+        // display: grid;
+        // justify-items: center;
+        // align-items: center;
+        // grid-auto-flow: column;
+        display: flex;
+        flex-wrap: wrap;
+
+        article {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex: 30%;
+        }
+
     .entry-content {
-        // padding: 0 6px;
-//   float: left;
-  width: 100%;
+        width: 95%;
         display: flex;
         flex-direction: column;
         align-items: center;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
-        // width: 90vw;
-        // height: 30vh;
         border-radius: 5px;
-        // margin: 1em;
+        margin: 0 auto;
         &:hover {
             box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
             color:#DD7D74;
           }
-        //   background: #ebb67a;
 
           .entry-header {
               padding: 1em;
@@ -307,17 +318,12 @@
 
           @include tablet {
             width: 49.99999%;
-            margin: 6px 0;
+            margin: 1em;
         }
 
         @include desktop {
-            padding: 0 6px;
-            float: left;
-            width: 24.99999%;
+            width: 350px;
         }
     }
 }
-
-* {
-    box-sizing: border-box;
-  }
+}
