--- a/themes/cjmedia/style.css
+++ b/themes/cjmedia/style.css
@@ -936,43 +936,57 @@ object {
     width: 100%;
     height: auto; }
 
-.site-main-show-tax .entry-content {
-  width: 100%;
+.site-main-show-tax .projects {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  border-radius: 5px; }
-  .site-main-show-tax .entry-content:hover {
-    -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    color: #DD7D74; }
-  .site-main-show-tax .entry-content .entry-header {
-    padding: 1em;
-    text-align: center; }
-  @media screen and (min-width: 768px) {
-    .site-main-show-tax .entry-content {
-      width: 49.99999%;
-      margin: 6px 0; } }
-  @media screen and (min-width: 1080px) {
-    .site-main-show-tax .entry-content {
-      padding: 0 6px;
-      float: left;
-      width: 24.99999%; } }
-
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+  .site-main-show-tax .projects article {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-flex: 30%;
+        -ms-flex: 30%;
+            flex: 30%; }
+  .site-main-show-tax .projects .entry-content {
+    width: 95%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    border-radius: 5px;
+    margin: 0 auto; }
+    .site-main-show-tax .projects .entry-content:hover {
+      -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+              box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      color: #DD7D74; }
+    .site-main-show-tax .projects .entry-content .entry-header {
+      padding: 1em;
+      text-align: center; }
+    @media screen and (min-width: 768px) {
+      .site-main-show-tax .projects .entry-content {
+        width: 49.99999%;
+        margin: 1em; } }
+    @media screen and (min-width: 1080px) {
+      .site-main-show-tax .projects .entry-content {
+        width: 350px; } }
 
 .site-header {
   position: fixed;
